<resources>
    <string name="app_name">Unsplash</string>
    <string name="download">Download</string>
    <string name="home">Home</string>
    <string name="best_of_the_month">Best of the month</string>
    <string name="latest_wallpapers">Latest wallpapers</string>
    <string name="the_color_tone">The color tone</string>
    <string name="profile">Profile</string>
    <string name="find_wallpaper">Find Wallpaper…</string>
    <string name="categories">Categories</string>
    <string name="apply">Apply</string>
    <string name="info">Info</string>
    <string name="save">Save</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="repeat">Repeat</string>
    <string name="revolution">it\'s revolution Jonny</string>
    <string name="jonnyboy">ryansmith7119@gmail.com</string>
    <string name="more">More</string>
    <string name="you_saved">You Saved</string>
    <string name="empty">Empty!</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="search">Search</string>
    <string name="totalPhotos">36 wallpapers available</string>
    <string name="help_center">Help Center</string>
    <string name="jonny">Jonny</string>
    <string name="unknown">Unknown</string>

    <string name="unsplash" translatable="false">Unsplash</string>
    <string name="unsplash_url" translatable="false">https://unsplash.com/?utm_source=resplash&amp;utm_medium=referral&amp;utm_campaign=api-credit</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="unsplash_summary">The best source of free wallpapers from the internet</string>

    <string name="instagram" translatable="false">Instagram</string>
    <string name="developer_instagram_username" translatable="false">\@dr.drakeson</string>
    <string name="developer_instagram_url" translatable="false">https://www.instagram.com/dr.drakeson/</string>

    <string name="telegram" translatable="false">Telegram</string>
    <string name="developer_telegram_username" translatable="false">\@dr_drakeson</string>
    <string name="developer_telegram_url" translatable="false">https://t.me/dr_drakeson</string>
    <string name="saved">Saved</string>
    <string name="error_massage">Error 404</string>
    <string name="no_wallpaper">There is no wallpaper...</string>

    <string name="wallpapers_available">wallpapers available</string>
    <string name="iso_cam_example">100</string>
    <string name="focal_length_cam_example">37</string>
    <string name="aperture_cam_example">4.970854</string>
    <string name="exposure_time_cam_example">0.011</string>
    <string name="model_cam_example">Canon EOS 40D</string>
    <string name="make_cam_example">Canon</string>
    <string name="iso">ISO</string>
    <string name="focal_length">Focal length</string>
    <string name="aperture">Aperture</string>
    <string name="exposure_time">Exposure time</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="camera">Camera</string>
    <string name="down_info_example">1345</string>
    <string name="color_info_example">#6E633A</string>
    <string name="likes_info_example">105</string>
    <string name="created_at_info_example">2016-05-03T11:00:28-04:00</string>
    <string name="resolution_info_example">2448 x 3264</string>
    <string name="id_image_info_example">Dwu85P9SOIk</string>
    <string name="downloads">Downloads</string>
    <string name="color">Color</string>
    <string name="likes">Likes</string>
    <string name="created">Created</string>
    <string name="resolution">Resolution</string>
    <string name="image_id">Image ID</string>
    <string name="info_location_example">Montreal / Canada</string>
    <string name="info_user_example">Joe Example</string>
    <string name="options">Options:</string>
    <string name="delete">Delete</string>
    <string name="swipe_to_Refresh">Swipe to Refresh</string>
    <string name="wait_a_second">Wait a second...</string>
    <string name="start_download">Start download</string>
    <string name="done">Done</string>

</resources>