<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/back_info_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_info_user"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription,ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/back_info_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_info_user"
        app:layout_constraintTop_toTopOf="@+id/back_info_user">

        <TextView
            android:id="@+id/info_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/info_user_example"
            android:textColor="@color/my_text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/info_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_location_example"
            android:textSize="14sp"
            android:textColor="@color/my_text_color"
            app:layout_constraintEnd_toEndOf="@+id/info_user"
            app:layout_constraintStart_toStartOf="@+id/info_user"
            app:layout_constraintTop_toBottomOf="@+id/info_user" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@color/my_text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/back_info_user"
        app:layout_constraintTop_toBottomOf="@+id/back_info_user" />

    <LinearLayout
        android:id="@+id/linear_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@+id/info_text"
        app:layout_constraintRight_toLeftOf="@id/linear_data"
        app:layout_constraintTop_toBottomOf="@+id/info_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_id"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolution"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloads"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/linear_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text">

        <TextView
            android:id="@+id/id_image_info"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:text="@string/id_image_info_example"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/resolution_info"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:text="@string/resolution_info_example"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/created_at_info"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:textColor="@color/my_text_color"
            android:layout_height="wrap_content"
            android:text="@string/created_at_info_example"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/likes_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/my_text_color"
            android:text="@string/likes_info_example"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/color_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:text="@string/color_info_example"
            android:maxLines="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/down_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:text="@string/down_info_example"
            android:maxLines="1"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/camera_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="@color/my_text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/linear_info"
        app:layout_constraintTop_toBottomOf="@+id/linear_info" />

    <LinearLayout
        android:id="@+id/linear_info_cam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@+id/camera_info"
        app:layout_constraintRight_toLeftOf="@id/linear_data_cam"
        app:layout_constraintTop_toBottomOf="@+id/camera_info">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exposure_time"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aperture"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focal_length"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iso"
            android:textColor="@color/my_text_color"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_data_cam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/linear_info_cam"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_info">

        <TextView
            android:id="@+id/make_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:text="@string/make_cam_example"
            android:maxLines="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/model_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:text="@string/model_cam_example"
            android:maxLines="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/exposure_time_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:text="@string/exposure_time_cam_example"
            android:maxLines="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/aperture_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:maxLines="1"
            android:text="@string/aperture_cam_example"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/focal_length_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:maxLines="1"
            android:text="@string/focal_length_cam_example"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/iso_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:maxLines="1"
            android:text="@string/iso_cam_example"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>