<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/options"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/save_to_downloads"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_repeat"
        android:backgroundTint="@color/my_background_bottom_sheet"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:text="@string/download"
        android:textColor="@color/my_text_color"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/save_to_favorite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_repeat"
        android:backgroundTint="@color/my_background_bottom_sheet"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:text="@string/save"
        android:textColor="@color/my_text_color"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/delete_to_favorites"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_repeat"
        android:backgroundTint="@color/my_background_bottom_sheet"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:text="@string/delete"
        android:textColor="@color/my_text_color"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>